syntax = "proto3";

package terminal;

option go_package = "github.com/joshmeranda/marina/apis/terminal";

import "google/protobuf/empty.proto";
import "pkg/apis/core/core.proto";

service TerminalService {
    rpc CreateTerminal(TerminalCreateRequest) returns (google.protobuf.Empty) {}

    rpc DeleteTerminal(TerminalDeleteRequest) returns (google.protobuf.Empty) {}
}

message TerminalSpec {
    string image = 2;
}

message TerminalCreateRequest {
    core.NamespacedName name = 1;
    TerminalSpec spec = 2;
}

message TerminalDeleteRequest {
    core.NamespacedName name = 1;
}